--- a/Entrega_1/app/build.gradle
+++ b/Entrega_1/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.7.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
     implementation 'com.google.android.material:material:1.13.0'
+    implementation 'com.google.firebase:firebase-firestore:26.0.1'
 
     // Testes
     testImplementation 'junit:junit:4.13.2'
